--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://vickyalwardhie.github.io/vickyalwardhie",
+  "homepage": "https://vickyalwardhie.github.io/VickyAlwardHie",
   "name": "vicky-hie-architect",
   "private": true,
   "version": "0.0.0",
